apps/external/proxmox/endpoint-slice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: proxmox-euclid
  namespace: proxmox
  labels:
    kubernetes.io/service-name: proxmox-euclid
    endpointslice.kubernetes.io/managed-by: cluster-admins
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.1.42
    conditions:  # https://github.com/argoproj/argo-cd/issues/15554
      ready: true
ports:
  - name: https
    protocol: TCP
    port: 8006
