apps/external/proxmox/tls-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: proxmox
  namespace: proxmox
spec:
  parentRefs:
    - name: proxmox
      namespace: gateway
  hostnames:
    - "proxmox.euclid.stonegarden.dev"
  rules:
    - backendRefs:
        - name: proxmox-euclid
          port: 443
